# PaperPal

./: .gitignore  MODEL_CARD.md  README.md  WRITEUP.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  embeddings.py  hybrid.py  ingest.py  llm.py  main.py  models.py  rag.py  rerank.py  store.py  vlm.py
backend/eval/: README.md  REPORT.md  baseline_no_rag.py  dataset.jsonl  generate_questions.py  report.py  run_ablation.ps1  run_eval.py
backend/tests/: test_ingest.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/docs/: route.ts
frontend/src/app/api/docs/[paper_id]/: route.ts
frontend/src/app/api/query/: route.ts
frontend/src/app/api/query/image/: route.ts
frontend/src/app/api/upload/: route.ts
frontend/src/components/: Chat.tsx  Citation.tsx  RetrievedChunks.tsx  ThemeToggle.tsx  Upload.tsx
frontend/src/lib/: api.ts
