[project]
name = "paperpal-backend"
version = "0.1.0"
description = "RAG over research papers — backend service"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pymupdf>=1.24.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.5.20",
    "sentence-transformers>=3.3.0",
    "loguru>=0.7.2",
    "httpx>=0.27.0",
    # Use OS certificate store for SSL — required on Windows to avoid
    # CERTIFICATE_VERIFY_FAILED on first model download / HF Hub HEAD checks.
    "truststore>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-requests",
]
eval = [
    "ragas>=0.2.0",
    "datasets>=3.0.0",
    "pandas>=2.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# B008 flags any function call in arg defaults, but `File(...)` and
# `Path(...)` are the canonical FastAPI dependency-injection pattern.
"app/main.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
